--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="project-body">
                 <div class="project-title">Music Website</div>
                 <p class="project-desc">A simple static music player landing page built with HTML and CSS.</p>
-                <a href="/music page/music.html" target="_blank" class="btn btn-primary btn-view">View Project</a>
+                <a href="/music-page/music.html" target="_blank" class="btn btn-primary btn-view">View Project</a>
             </div>
             </div>
         </div>
@@ -69,7 +69,7 @@
             <div class="project-body">
                 <div class="project-title">Diwali Landing Page</div>
                 <p class="project-desc">A festive-themed responsive webpage celebrating Diwali.</p>
-                <a href="/Diwali Page/Diwali.html" target="_blank" class="btn btn-primary btn-view">View Project</a>
+                <a href="https://lakshminagasai.github.io/Diwali-Page/" target="_blank" class="btn btn-primary btn-view">View Project</a>
             </div>
             </div>
         </div>
