--- a/Diwali-Page/Diwali.html
+++ b/Diwali-Page/Diwali.html
@@ -59,10 +59,11 @@
        <button class="btn btn-primary ">
             View More
         </button>
-        <a href="/My Projects Page/Projects.html" target="_blank">
+        <a href="https://lakshminagasai.github.io/Static-Projects/" target="_blank">
             <button class="btn btn-primary" >Back</button></a>
     </div>
     
     
 </body>
+
 </html>
